@@ -19,6 +19,7 @@
 #' @importFrom stats as.dist hclust runif rnorm chisq.test fisher.test sd fft
 #' @importFrom stats p.adjust shapiro.test t.test wilcox.test pnorm quantile
 #' @importFrom stats rpois dnorm ecdf var qnorm plogis pweibull ks.test pbinom
+#' @importFrom stats cutree
 #' @importFrom MASS fitdistr
 #' @importFrom utils read.table menu packageDescription combn capture.output
 #' @importFrom Biostrings width consensusMatrix BString AAString matchPWM
